# ComfyUI_SoX_Effects

./: .coveragerc  .gitignore  README.md  __init__.py  audio_to_fir_coeff.py  check_tested_nodes.py  pyproject.toml  quick_lint.sh  requirements-dev.txt  requirements.txt  requirements_no-ver.txt  requirements_nv_versioned.txt  sox_effects.py  sox_node_utils.py  sox_utils.py  sox_voices.py
.aiassistant/rules/: AI-Rules-Programmer-ComfyUI.md  AI-Rules-Programmer-SoX.md
.aider-desk/rules/: AI-Rules-General.md  AI-Rules-Git.md
.junie/: Juni-Guidelines.md
dev-scripts/: test_cli_preview.py  test_mono.py  test_node.py  test_preview.py
fir_coeffs/: Block Inside.fir  Bottle Hall.fir  Cement Blocks 1.fir  Cement Blocks 2.fir  Chateau de Logne, Outside.fir  Conic Long Echo Hall.fir  Deep Space.fir  Derlon Sanctuary.fir  Direct Cabinet N1.fir  Direct Cabinet N2.fir  Direct Cabinet N3.fir  Direct Cabinet N4.fir  Five Columns Long.fir  Five Columns.fir  French 18th Century Salon.fir  Going Home.fir  Greek 7 Echo Hall.fir  Highly Damped Large Room.fir  IMreverbs.md  In The Silo Revised.fir  In The Silo.fir  Large Bottle Hall.fir  Large Long Echo Hall.fir  Large Wide Echo Hall.fir  Masonic Lodge.fir  Musikvereinsaal.fir  Narrow Bumpy Space.fir  Nice Drum Room.fir  On a Star.fir  Parking Garage.fir  Rays.fir  Right Glass Triangle.fir  Ruby Room.fir  Scala Milan Opera Hall.fir  Small Drum Room.fir  Small Prehistoric Cave.fir  Trig Room.fir  Vocal Duo.fir
notes/: ComfyUI_SoX_effects Prompts.md  Graphing Multiple sox--plot Effect Plots Together.md  RMS-Power and Max-Amplitude Mixing~ Why-When.md  SoX --plot Usage.md  SoX Effect Modules (61 Total) vs torchaudio.sox_effects.md  SoX multiple file input.md  SoxUtilMuxAudio5_1 auto_vol_balance Implementation.md  Why Implement Absonic Audio Processing.md  Working With Aider-Desk Worktrees.md
src/: sox_effects.py  sox_node_utils.py  sox_utils.py  sox_voices.py
tests/: __init__.py  conftest.py  test_sox_nodes.py
